# rust_screenshot_app_1

./: .gitignore  Cargo.toml  README.md  app.rc  build.rs  config.ini.example
.github/workflows/: build.yml
src/: main.rs
