[package]
name = "tray-scsht-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "2.2"

[dependencies]
configparser = "3"
jpeg-encoder = "0.6.1"
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Kernel",
] }
